--- a/1-birthday-reminder/setup/src/index.css
+++ b/1-birthday-reminder/setup/src/index.css
@@ -42,6 +42,7 @@ Variables
   --max-width: 1170px;
   --fixed-width: 450px;
   --clr-pink: #f28ab2;
+  --clr-panda: #f0fff0;
 }
 /*
 =============== 
@@ -59,7 +60,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-pink);
+  background: var(--clr-panda);
   color: var(--clr-grey-9);
   line-height: 1.5;
   font-size: 0.875rem;
